--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "firebase": "^12.6.0",
     "next": "16.0.6",
     "react": "19.2.0",
